governance-shared/baselines/3.2.0/ChronoPM-Project/assets/templates/personal-daily-todo-template.md
---
doc_type: personal-daily-todo
owner: [姓名]
date: YYYY-MM-DD
project: [子项目名]
---

# 待办 - {YYYY-MM-DD} - {姓名}

> 存储于 `todos/{YYYY-MM-DD}/{姓名}.md`，待办为唯一最小可执行单位。
> v3.0.0 章节序：§0 人员信息 → §0.5 进出组记录 → §0.6 能耗记录 → §1 待办清单（3 表 + 备注区）→ §2 日报存档 → §3 工作日志 → §4 个人备注 → §5 时间线/里程碑影响 → §6 变更日志 → Revision Log。

## 0. 人员信息

> 本段记录该人员的基本身份信息。T+1 拷贝范围含 §0 / §0.5 / §0.6：新建当日文件时从该人最新文件拷贝（滚存快照）。
> PM 不主动要求修改时，直接沿用前一天数据。字段缺失时 AI 提示 PM 补全。
> 注意：本段仅承载身份快照，项目级资源状态（参与项目/分配方式/B角等）见 resource-register；两者冲突时以 resource-register 为权威源。
> 「首次进组日期 / 当前在组状态」由 §0.5 推导，不再手填。

| 字段 | 值 |
|---|---|
| 岗位 | [PM / 后端开发 / 前端开发 / 测试 / UI / DBA / 架构师 / 其他] |
| 姓名 | [姓名] |
| 联系方式 | [手机号/邮箱] |
| 负责模块 | [业务模块名] |
| 首次进组日期 | YYYY-MM-DD（由 §0.5 首行推导） |
| 当前在组状态 | 在组 / 已出组（由 §0.5 末行推导） |

## 0.5 进出组记录

> 多行事件流。长期在组者一行（出组日期=待定）；间接配合人员每次配合一行。
> T+1 拷贝：整表复制；当日有日报/待办且末行已出组时追加新进组行。AI 不自动判出组。

| 进组日期 | 出组日期 | 触发依据 | 备注 |
|---|---|---|---|
| YYYY-MM-DD | YYYY-MM-DD / 待定 | 日报产出 / 待办指派 / PM 声明 | [备注] |

## 0.6 能耗记录

> 人员维度累计与每日明细。单位取自 `project-context`「成本核算方式」的人工计量单位，模板一律写 `[能耗单位]`，禁止写死具体单位。
> 当日能耗由 PM 投喂或按默认能耗规则登记；AI 禁止自行推算。无数据时标「—」。
> T+1 拷贝：明细整段复制 + 追加当日行，累计值按明细重算。统计只读该人最新文件。

累计总能耗：N [能耗单位]（截至 YYYY-MM-DD）

| 日期 | 当日能耗 | 来源 | 备注 |
|---|---|---|---|
| YYYY-MM-DD | N [能耗单位] / — | PM 投喂 / 默认规则 | [备注] |

## 1. 待办清单

> 三张表通过“待办编号”列关联，AI 生成时逐表填写。列预算硬约束：核心执行表 8 列为 AI 生成稳定上限，后续新增字段一律下沉备注区或其他表。

### 1.1 核心执行表（8 列）

| 待办编号 | 标题 | 状态 | 进度 | WP Ref | 计划 Ref | 开始时间 | 结束时间 |
|---|---|---|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | [任务] | 待处理/进行中/待评审/已阻塞/已完成/已取消/已转出 | 0%~100% / — | WP-NNN | PLAN-NNN | YYYY-MM-DD | YYYY-MM-DD |

### 1.2 工时与变更表（5 列）

| 待办编号 | 原始结束时间 | 预估工时 | 实际工时 | 延期次数 |
|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | YYYY-MM-DD | [人天] | [人天] / — | [N] |

### 1.3 关联与溯源表（5 列）

| 待办编号 | 风险 Ref | 问题 Ref | 阻塞 Ref | 溯源 |
|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | R-xxx / — | I-xxx / — | — | TD-x→TD-y / — |

### 1.4 备注区（列表格式，非表格）

- TD-{缩写}-{YYYYMMDD}-{NNN}：[备注] | 来源：口述/日报/会议/变更/风险跟踪/问题跟踪/PM督办/新建/结转 | 是否结转：是/否 | 跨天：是/否

> 字段约定（对齐 references/00-pm-main-rules.md §5a 与升级方案 9.1）：
> - **待办编号**：全局唯一，编号中的日期 = 创建日期（**结转/跨天不变**）。
>   - ⚠️ **硬约束**：结转任务**必须沿用原编号**（如 `TD-朱宇杰-20260817-002`），禁止重新编号为今天的日期（如 `TD-朱宇杰-20260818-003`）
>   - **场景区分**：
>     - 结转（跨天，同一人）→ 编号不变
>     - 换人（转交，不同人）→ 生成新编号 + 溯源链（`TD-张三 -... → TD-李四 -...`）
>     - 新建（全新任务）→ 新编号
> - **原始结束时间**（工时与变更表）：不可变基线，首次设定后永不修改；超期始终按此判定，结束时间可随延期后移。
> - **结束时间**（核心执行表）：当前预计完成日期，可随延期后移（每次后移 延期次数 +1）。
> - **溯源**（关联与溯源表）：换人链路，`TD-xxx → TD-yyy → 当前编号`。
> - **进度**（核心执行表，v2.1.0 新增）：取值 0%~100%（或“—”）；来源：日报映射/PM 手工更新；结转时进度随待办一起结转。
>   - ⚠️ **进度↔状态双轨仲裁（D-26）**：状态列为唯一权威源，进度列为辅助量化。状态=已完成 ⇒ 进度必须 100%（若 <100% 自动修正为 100% 并记 §6 变更日志）；进度=100% 但状态≠已完成 ⇒ **不自动提升状态**（已完成为终态，需 PM 确认），仅输出待办联动建议；状态=已取消/已转出 ⇒ 进度保留当前快照，不强制清零。
>
> **多表结构读取约定**：待办状态 = 核心执行表“状态”列（唯一权威源）；待办进度 = 核心执行表“进度”列；是否结转/结转来源 = 备注区（按待办编号匹配）；工时/延期 = 工时与变更表；风险/问题/阻塞关联 = 关联与溯源表。

## 2. 日报存档

> 日报原文逐字存档（v2.1.0 新增，需求十三两步流程第一步）：收集到的个人工作汇报先**逐字**写入本段，禁止只存加工摘要；存档是映射的前置步骤（先存档后映射）。加工结果写入 §3 工作日志段，进度/问题描述按映射规则落待办字段（见 01 号规则日报两步流程）。

### YYYY-MM-DD [HH:MM] 收集（来源：口述/群消息/邮件/其他）

> [日报原文，逐字保留]

**映射登记**（可溯源）：
- [日报条目] → TD-{缩写}-{YYYYMMDD}-{NNN}：进度列更新为 XX% / 备注区补充 [内容]
- [无法匹配任何待办的进展] → 标记“待归属”，由 PM 确认是否新建待办（禁止 AI 自动新建）

## 3. 工作日志

> 记录已完成工作（非待办执行，属纯日志）。已完成待办在“待办清单”标状态=已完成，此处补记产出。日报的加工结果写入本段（原文在 §2 日报存档段）。

- [时间] [工作内容 / 产出]

## 4. 个人备注

- [备注]

## 5. 时间线 / 里程碑影响

| WP 编码 | 所属阶段 | 里程碑影响 |
|---|---|---|
| WP-NNN | M0X | [影响说明] |

## 6. 变更日志

| 时间 | 变更内容 | 原因 |
|---|---|---|
| YYYY-MM-DD | [变更] | [原因] |

## Revision Log

| Time | Change | Reason | Operator |
|---|---|---|---|
